--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canboys</title>
+    <title>CanBoys</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,5 +22,6 @@
     </div>
 
 </body>
+
 
 </html>
