--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="overlay"></div>
         <div class="heading-text">
             <h1>VIKASIT</h1>
+            <h3>only website needed for students</h3>
 
         </div>
     </div>
@@ -25,3 +26,4 @@
 
 
 </html>
+
